# yage

./: .gitignore  .gitmodules  CMakeLists.txt  Engine.cc  Engine.hh  engine.cc  engine.hh  main.cpp  sokol.c
assets/shaders/: camel.glsl  sand.glsl  triangle.glsl  triangle.vsh  v_triangle.glsl
engine/: CMakeLists.txt  engine.cc  engine.hh  util.cc  util.hh
engine/cmake/: shaders.cmake
engine/source/: components.hh  engine.cc  engine.hh  renderpass.cc  renderpass.hh  resource.cc  resource.hh
pc/: CMakeLists.txt  pc_main.cc
pc/source/: pc_main.cc
platform_switch/: CMakeLists.txt
platform_switch/templates/application/: CMakeLists.txt
platform_switch/templates/application/source/: switch_main.cc
switch/: main.c
